Migrate from Collectors.toList() -> toList()